# iSponsorBlockTV

./: .deepsource.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.json.template  config.yaml  create_config.py  docker-compose.prod.yml  docker-compose.yml  main-macos.py  main-macos.spec  main.py  main_tui.py  pyproject.toml  readme.md  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_docker_images.yml  main.yml  release.yml  release_pypi.yml  update_docker_readme.yml
dashboard/: Dockerfile
dashboard/backend/: main.py  requirements.txt
dashboard/frontend/: index.html  package-lock.json  package.json
dashboard/frontend/src/: App.jsx  index.css
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: MainLayout.tsx
frontend/src/contexts/: AuthContext.tsx  WebSocketContext.tsx
frontend/src/pages/: DashboardPage.tsx  DevicesPage.tsx  LoginPage.tsx  SettingsPage.tsx  SetupPage.tsx
frontend/src/types/: index.ts
iSponsorBlockTV/: __init__.py  api_helpers.py  conditional_ttl_cache.py  config_setup.py  constants.py  dial_client.py  helpers.py  log_helpers.py  macos_install.py  main.py  setup_wizard.py  ytlounge.py
scripts/: build.sh
services/: README.md
services/systemd/: install.sh  isponsorblocktv.service  uninstall.sh
src/: main.py  main_web.py
src/iSponsorBlockTV/: __main__.py  api_helpers.py  chromecast_client.py  conditional_ttl_cache.py  config_setup.py  constants.py  debug_helpers.py  dial_client.py  helpers.py  logging_helpers.py  macos_install.py  main.py  setup-wizard-style.tcss  setup_wizard.py  webhook_helpers.py  ytlounge.py
src/iSponsorBlockTV/service/: service_helpers.py  service_managers.py
src/iSponsorBlockTV/web/: __init__.py  __main__.py  api.py  auth.py  state.py  websocket.py
(+9 files in other folders)
