[project]
name = "iSponsorBlockTV"
version = "2.3.1"
authors = [
    {"name" = "dmunozv04"}
]
description = "SponsorBlock client for all YouTube TV clients"
#readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Home Automation"
]
dependencies = [
    "aiohttp==3.11.12",
    "appdirs==1.4.4",
    "async-cache==1.1.1",
    "pyytlounge==2.1.2",
    "rich==13.9.4",
    "rich-click==1.8.5",
    "ssdp==1.3.0",
    "textual==1.0.0",
    "textual-slider==0.2.0",
    "xmltodict==0.14.2",
]

[project.urls]
"Homepage" = "https://github.com/dmunozv04/iSponsorBlockTV"
"Bug Tracker" = "https://github.com/dmunozv04/iSponsorBlockTV/issues"

[project.scripts]
"iSponsorBlockTV" = "iSponsorBlockTV.__main__:main"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
